Added TODO section. Fixed incorrect Enum Classes. Made some code more explicit. Removed spacing in Model Type Names. Simplified name formatting using regex.sub instead of str.replace. Renamed .env variables to be plural like they would be expected to be.

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 COOKIE_FILE_PATH = "cookies.txt"
-LORA_DIR = "/path/to/lora/download/dir"
-CHECKPOINT_DIR = "/path/to/checkpoint/download/dir"
-TEXTUALINVERSION_DIR = "/path/to/textualinversion/download/dir"
-HYPERNETWORK_DIR = "/path/to/hypernetwork/download/dir/"
-AESTHETICGRADIENT_DIR = "./path/to/aestheticgradient/download/dir"
-CONTROLNET_DIR = "/path/to/controlnet/download/dir"
+LORAS_DIR = "/path/to/lora/download/dir"
+CHECKPOINTS_DIR = "/path/to/checkpoint/download/dir"
+TEXTUALINVERSIONS_DIR = "/path/to/textualinversion/download/dir"
+HYPERNETWORKS_DIR = "/path/to/hypernetwork/download/dir/"
+AESTHETICGRADIENTS_DIR = "./path/to/aestheticgradient/download/dir"
+CONTROLNETS_DIR = "/path/to/controlnet/download/dir"
 POSES_DIR = "/path/to/poses/download/dir"
 CHUNK_SIZE = 65536
